[gd_scene load_steps=48 format=2]

[ext_resource path="res://assets/images/ui/Right-Menu.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/hud.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ui/Left-Menu.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/resources_dlg.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/time_line.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/tile_popup_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/pause_dlg.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/stat_display.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/structures_dialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/help_dialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/hud_alerts.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ui/reclaim_confirmation_dialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/ui/construction_drawer.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/styles/hud_text_button_style.tres" type="StyleBox" id=14]
[ext_resource path="res://assets/images/ui/Drill-Deploy.png" type="Texture" id=15]
[ext_resource path="res://assets/images/ui/Drill-Deploy-Active.png" type="Texture" id=16]
[ext_resource path="res://scenes/ui/tile_tooltip.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/images/ui/Help.png" type="Texture" id=18]
[ext_resource path="res://assets/fonts/text_small.tres" type="DynamicFont" id=19]
[ext_resource path="res://assets/images/ui/highlight_round_btn.png" type="Texture" id=20]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 66, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 132, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 198, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 264, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 330, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 396, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 462, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 528, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 594, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 660, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 726, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 792, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 858, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 924, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 990, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1056, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1122, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1188, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1254, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1320, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1386, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1452, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1518, 0, 66, 66 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=26]
resource_name = "hide launch harvester highlight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer/HBoxContainer/LaunchHarvesterBtn/LaunchHarvesterBtnHighlight:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "show launch harvester highlight"
tracks/0/type = "value"
tracks/0/path = NodePath("BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer/HBoxContainer/LaunchHarvesterBtn/LaunchHarvesterBtnHighlight:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ) ]
}

[node name="Hud" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ConstructionDrawer" parent="." instance=ExtResource( 13 )]

[node name="BottomRightMarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -119.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BottomRightMarginContainer"]
margin_right = 180.0
margin_bottom = 119.0
grow_vertical = 0

[node name="SkipTutorialBtn" type="Button" parent="BottomRightMarginContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/normal = ExtResource( 14 )
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0.823529, 0, 0.462745, 1 )
custom_colors/font_color_hover = Color( 0.823529, 0, 0.462745, 1 )
custom_colors/font_color_pressed = Color( 0.823529, 0, 0.462745, 1 )
text = "Skip Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BottomRightMarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 180.0
margin_bottom = 119.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="BottomRightMarginContainer/VBoxContainer/TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = 20
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 70.0
custom_constants/separation = 20

[node name="HelpBtn" type="TextureButton" parent="BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
hint_tooltip = "Help"
texture_normal = ExtResource( 18 )

[node name="LaunchHarvesterBtn" type="TextureButton" parent="BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 120.0
margin_bottom = 50.0
hint_tooltip = "Launch Harvester"
texture_normal = ExtResource( 15 )

[node name="ActiveHarvesterAnimation" type="AnimatedSprite" parent="BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer/HBoxContainer/LaunchHarvesterBtn"]
visible = false
frames = SubResource( 25 )
centered = false
offset = Vector2( -8, -8 )

[node name="LaunchHarvesterBtnHighlight" type="Sprite" parent="BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer/HBoxContainer/LaunchHarvesterBtn"]
self_modulate = Color( 1, 0, 0.411765, 0 )
texture = ExtResource( 20 )
centered = false
offset = Vector2( -7.5, -7.5 )

[node name="BottomLeftMarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -205.0
margin_right = 180.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BottomLeftMarginContainer"]
margin_right = 180.0
margin_bottom = 205.0
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="BottomLeftMarginContainer/TextureRect"]
margin_right = 145.0
margin_bottom = 200.0
custom_constants/margin_top = 5
custom_constants/margin_left = 35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BottomLeftMarginContainer/TextureRect/MarginContainer"]
margin_left = 35.0
margin_top = 5.0
margin_right = 145.0
margin_bottom = 200.0
custom_constants/separation = 4

[node name="PopulationStatDisplay" parent="BottomLeftMarginContainer/TextureRect/MarginContainer/VBoxContainer" instance=ExtResource( 8 )]

[node name="PowerStatDisplay" parent="BottomLeftMarginContainer/TextureRect/MarginContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 49.0
margin_bottom = 94.0
stat_label = "Current Power"
stat_name = "Power"

[node name="PowerRequiredStatDisplay" parent="BottomLeftMarginContainer/TextureRect/MarginContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 98.0
margin_bottom = 143.0
stat_label = "Power Needed"
stat_name = "TotalPowerRequired"

[node name="OreStatDisplay" parent="BottomLeftMarginContainer/TextureRect/MarginContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 147.0
margin_bottom = 192.0
stat_label = "Ore"
stat_name = "ore"
is_resource = true

[node name="TimeLine" parent="." instance=ExtResource( 5 )]
pause_mode = 1
anchor_left = 0.5
anchor_right = 0.5
margin_left = -351.0
margin_right = 351.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 723.93, 511.996 )
game_time_length_minutes = 20
showers_per_game_min = 8
showers_per_game_max = 12

[node name="HudAlerts" parent="." instance=ExtResource( 11 )]

[node name="Dialogs" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ResourcesDlg" parent="Dialogs" instance=ExtResource( 4 )]
visible = false

[node name="TilePopupMenu" parent="Dialogs" instance=ExtResource( 6 )]

[node name="PauseDlg" parent="Dialogs" instance=ExtResource( 7 )]
visible = false

[node name="StructuresDialog" parent="Dialogs" instance=ExtResource( 9 )]

[node name="HelpDialog" parent="Dialogs" instance=ExtResource( 10 )]

[node name="ReclaimConfirmationDialog" parent="Dialogs" instance=ExtResource( 12 )]

[node name="TileTooltip" parent="Dialogs" instance=ExtResource( 17 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/hide launch harvester highlight" = SubResource( 26 )
"anims/show launch harvester highlight" = SubResource( 27 )
[connection signal="pressed" from="BottomRightMarginContainer/VBoxContainer/SkipTutorialBtn" to="." method="_on_SkipTutorialBtn_pressed"]
[connection signal="pressed" from="BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer/HBoxContainer/HelpBtn" to="." method="_on_HelpBtn_pressed"]
[connection signal="pressed" from="BottomRightMarginContainer/VBoxContainer/TextureRect/MarginContainer/HBoxContainer/LaunchHarvesterBtn" to="." method="_on_LaunchHarvesterBtn_pressed"]
